--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "homepage": "https://github.com/DavideViolante/pr-reviews-reminder-action#readme",
   "dependencies": {
     "@actions/core": "^1.10.1",
-    "axios": "^1.6.8"
+    "axios": "^1.6.8",
+    "parse-git-diff": "^0.0.15"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.38.1"
