--- a/action.yaml
+++ b/action.yaml
@@ -15,6 +15,11 @@ inputs:
     description: 'Slack Channel name'
     required: false
     default: '#general'
+  pr-last-updated-time-exceeding-x-hours: # optional
+    description: 'Fetch Pull Requests with last updated time exceeding X hours'
+    required: false
+    default: '0' # default get all open Pull Requests
+  
 runs:
   using: 'node20'
   main: 'dist/index.js'
