--- a/action.yaml
+++ b/action.yaml
@@ -15,6 +15,9 @@ inputs:
     description: 'language'
     required: false
     default: 'en'
+  SPECIFIC_GITHUB_REPOSITORY
+    description: 'fetch specific github repository'
+    required: false
   SLACK_WEBHOOK_URL_CHANNEL_NAME: 
     description: 'Slack Channel name'
     required: false
